internal/templates/monitoring/02-prometheus-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prometheus-operator
  template:
    metadata:
      labels:
        name: prometheus-operator
    spec:
      containers:
        - name: prometheus-operator
          image: quay.io/prometheus-operator/prometheus-operator:v0.70.0
          args:
            - --kubelet-service=kube-system/kubelet
            - --log-level=info
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
