internal/templates/monitoring/_old_06-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 8000
      targetPort: 8000
      nodePort: 30186

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    prometheus: k3s-prometheus
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP # reicht ebenfalls für Ingress
